--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,4 +10,12 @@ services:
       - POSTGRES_PASSWORD=admin1234
       - POSTGRES_DB=traumdb
     
-    
+  web:
+    build: ./
+    ports:
+      - 3001:3001
+      - 8282:8282
+    depends_on:
+      - database
+    links:
+      - database
