--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
     ports:
       - 3001:3001
       - 8282:8282
+    volumes:
+      - ./log/:/usr/src/app/log
     depends_on:
       - database
     links:
